# sbt-papers

./: .gitignore  CITATION.cff  LICENSE  LICENSE-data  README.md  SYNTHETIC_COHORT_INTEGRATION_PLAN.md  pyproject.toml  reproduce.sh
alibi-epistemology/: 2026b.bib  AGENTS.md  CITATION.cff  CITATIONS.md  CONTRIBUTORS.yaml  DATA_MANIFEST.yaml  GLOSSARY.md  ONTOLOGY.yaml  PROVENANCE.yaml  README.md  SPINE.yaml  paper.md  paper.yaml
brand-correspondence-principle/: 2026au.bib  AGENTS.md  CITATION.cff  CITATIONS.md  GLOSSARY.md  ONTOLOGY.yaml  README.md  SPINE.yaml  paper.md  paper.yaml
brand-spectrometer-methods/: 2026ax.bib  AGENTS.md  CITATION.cff  CITATIONS.md  GLOSSARY.md  ONTOLOGY.yaml  README.md  SPINE.yaml  paper.md  paper.yaml
canon-as-repository/: 2026w.bib  AGENTS.md  CITATION.cff  CITATIONS.md  CONTRIBUTING.md  CONTRIBUTORS.yaml  DATA_MANIFEST.yaml  GLOSSARY.md  LICENSE  ONTOLOGY.yaml  PROVENANCE.yaml  README.md  SPINE.yaml  paper.md  paper.yaml
forming-a-perception/: 2026aw.bib  AGENTS.md  CITATION.cff  CITATIONS.md  GLOSSARY.md  ONTOLOGY.yaml  README.md  SPINE.yaml  paper.md  paper.yaml
perception-sets-matrix/: 2026bf.bib  AGENTS.md  CITATION.cff  CITATIONS.md  GLOSSARY.md  ONTOLOGY.yaml  README.md  SPINE.yaml  WEB_APPENDIX.md  paper.md  paper.yaml  reproduce.sh
prism-b-brand/: CITATION.cff  CONTRIBUTORS.yaml  GLOSSARY.md  LICENSE  PROVENANCE.yaml  README.md  SPINE.yaml  paper.md  paper.yaml  prism.bib
prism-c-choice/: 2026bb.bib  AGENTS.md  CITATION.cff  CITATIONS.md  GLOSSARY.md  ONTOLOGY.yaml  README.md  SPINE.yaml  paper.md  paper.yaml
(+9126 files in other folders)
