[project]
name = "sbt-papers-hub"
version = "0.1.0"
description = "Hub index for SBT research papers"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Dmitry Zharnikov", email = "fermeradar@gmail.com" },
]
keywords = ["spectral brand theory", "brand perception", "multi-dimensional measurement"]

[project.urls]
"Homepage" = "https://github.com/spectralbranding/sbt-papers"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Hub-root tooling configuration. Per-paper subdirectories carry their own
# lint discipline within each paper bundle; the hub does not lint across slugs.
[tool.black]
extend-exclude = '''
/(
    r\d+-[^/]+
  | spectral-brand-theory
  | alibi-epistemology
  | prism-instrument
  | rendering-problem
  | canon-as-repository
  | output
)/
'''
